--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css"  href="CSS/Style.css">
 </head>
 <body>
-<h1> Hello </h1>
+  <h1 class="Center"> Hello </h1>
 </body>
 </html>
