--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <link rel="stylesheet" type="text/css"  href="CSS/Style.css">
 </head>
 <body>
-  <h1 class="Center"> Hello </h1>
-</body>
+  <div class="BorderAfter">
+  <h1 class="Center Border"> Hello </h1>
+  </div>
+    </body>
 </html>
