--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 <body>
   <div class="BorderAfter">
   <h1 class="Center Border"> Hello </h1>
+   <table style="width:100%">
+  <tr>
+    <th width="300px" height="300px class="Border">HI</th>
+    <th width="300px" height="300px" class="Border">Lastname</th> 
+  
+  </tr>
+</table> 
   </div>
     </body>
 </html>
