--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <h1 class="Center Border"> Hello </h1>
    <table style="width:100%">
   <tr>
-    <th width="300px" height="300px class="Border">HI</th>
-    <th width="300px" height="300px" class="Border">Lastname</th> 
+    <th width="50%" height="300px style="border:solid black 1px;">HI</th>
+    <th width="50%" height="300px" style="border:solid black 1px;">Lastname</th> 
   
   </tr>
 </table> 
