--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
   <h1 class="Center Border"> Hello </h1>
    <table style="width:100%">
   <tr>
-    <th width="50%" height="300px style="border:solid White 1px; color: white;">
-                                                                 <tr style="border:solid White 1px; color: white;">
-                                                                 <th> Hey </th> 
-                                                                 <th> Hey </th> 
-                                                                 </tr></th>
+    <th width="50%" height="300px style="border:solid White 1px; color: white;"> FirstName</th>
     <th width="50%" height="300px" style="border:solid White 1px;">Lastname</th> 
   
   </tr>
