--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1 class="Center Border"> Hello </h1>
    <table style="width:100%">
   <tr>
-    <th width="50%" height="300px style=" border:solid White 1px; color: white;"> FirstName</th>
+    <th width="50%" height="300px" style=" border:solid White 1px; color: white;"> FirstName</th>
     <th width="50%" height="300px" style=" border:solid White 1px; color: white;">Lastname</th> 
   
   </tr>
