--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <div class="BorderAfter">
   <h1 class="Center Border"> Hello </h1>
    <table style="width:100%">
-  <tr>
+  <tr  style=" border:solid White 1px;" >
     <th width="50%" height="300px" style=" border:solid White 1px; color: white;"> FirstName</th>
     <th width="50%" height="300px" style=" border:solid White 1px; color: white;">Lastname</th> 
   
