--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
-<!doctype html>
+<!doctype html> 
 <html>
 <head>
-  <link rel="stylesheet" type="text/css"  href="CSS/Style.css">
+  <style>
+    .Center {margin-left:auto; margin-right:auto;}
+  </style>
 </head>
 <body>
-  <div class="BorderAfter">
-  <h1 class="Center Border"> Hello </h1>
-   <table style="width:100%">
-  <tr  style=" border:solid White 1px;" >
-    <th width="50%" height="300px" style=" border:solid White 1px; color: white;"> FirstName</th>
-    <th width="50%" height="300px" style=" border:solid White 1px; color: white;">Lastname</th> 
-  
-  </tr>
-</table> 
-  </div>
-    </body>
+  <img Class="Center" width="200px" height="500px" src="https://bloximages.chicago2.vip.townnews.com/siouxcityjournal.com/content/tncms/assets/v3/editorial/a/d8/ad832fca-e14f-5c5e-a0a7-f41126431894/4d00327f6d4f8.image.jpg" Alt="Joe" />
+</body>
 </html>
