--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <style>
-    .Center {margin-left:auto; margin-right:auto;}
+    .Center { margin-left:auto; margin-right:auto; float:center; }
   </style>
 </head>
 <body>
-  <img Class="Center" width="200px" height="500px" src="https://bloximages.chicago2.vip.townnews.com/siouxcityjournal.com/content/tncms/assets/v3/editorial/a/d8/ad832fca-e14f-5c5e-a0a7-f41126431894/4d00327f6d4f8.image.jpg" Alt="Joe" />
+  <img Class="Center" width="350px" height="500px" src="https://bloximages.chicago2.vip.townnews.com/siouxcityjournal.com/content/tncms/assets/v3/editorial/a/d8/ad832fca-e14f-5c5e-a0a7-f41126431894/4d00327f6d4f8.image.jpg" Alt="Joe" />
 </body>
 </html>
