--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html>
 <head>
   <style>
-    .Center {margin-left:auto; margin-right:auto; float:center;}
+    .Center { margin-left:auto; margin-right:auto; float:center; }
+    .Burk { width:350px; height:500px; }
   </style>
 </head>
 <body>
-  <img Class="Center" width="350px" height="500px" src="https://bloximages.chicago2.vip.townnews.com/siouxcityjournal.com/content/tncms/assets/v3/editorial/a/d8/ad832fca-e14f-5c5e-a0a7-f41126431894/4d00327f6d4f8.image.jpg" Alt="Joe" />
-</body>
+  <table class="Center">
+    <tr>
+      <th>
+        <a href="https://docs.google.com/document/d/1GcFVtJ-KF0aKi_mQ-tWeCmIspfkwvOuveUM7TarN_0A/edit?usp=sharing" target="_blank"> Join The Burkology Group Document </a>
+      </th>
+      <th>
+  <img class="Burk"  src="https://bloximages.chicago2.vip.townnews.com/siouxcityjournal.com/content/tncms/assets/v3/editorial/a/d8/ad832fca-e14f-5c5e-a0a7-f41126431894/4d00327f6d4f8.image.jpg" Alt="Joe" />
+        </th>
+      <th>
+        <a href="https://docs.google.com/document/d/12LdwJIcPQfIMN0OL0HXOBxpryuyEtZxBABfu1Bpf-Do/edit?usp=sharing" target="_blank"> View The Orginal Document. </a>
+      </th>
+        </tr>
+  </table>
+    </body>
 </html>
