--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <style>
     .Center { margin-left:auto; margin-right:auto; float:center; }
     .Burk { width:350px; height:500px; }
+    .Border { border:2px solid black; border-radius: 20px; }
   </style>
 </head>
   <header>
@@ -13,14 +14,14 @@
 <body>
   <table class="Center">
     <tr>
-      <th>
-        <a href="https://docs.google.com/document/d/1GcFVtJ-KF0aKi_mQ-tWeCmIspfkwvOuveUM7TarN_0A/edit?usp=sharing" target="_blank"> Join The Burkology Group Document </a>
+      <th style="float:left;">
+        <a href="https://docs.google.com/document/d/1GcFVtJ-KF0aKi_mQ-tWeCmIspfkwvOuveUM7TarN_0A/edit?usp=sharing" target="_blank"><p class="Border">Join The Burkology Group Document </p></a>
       </th>
       <th>
-  <img class="Burk"  src="https://bloximages.chicago2.vip.townnews.com/siouxcityjournal.com/content/tncms/assets/v3/editorial/a/d8/ad832fca-e14f-5c5e-a0a7-f41126431894/4d00327f6d4f8.image.jpg" Alt="Joe" />
+  <img class="Burk Border"  src="https://bloximages.chicago2.vip.townnews.com/siouxcityjournal.com/content/tncms/assets/v3/editorial/a/d8/ad832fca-e14f-5c5e-a0a7-f41126431894/4d00327f6d4f8.image.jpg" Alt="Joe" />
         </th>
-      <th>
-        <a href="https://docs.google.com/document/d/12LdwJIcPQfIMN0OL0HXOBxpryuyEtZxBABfu1Bpf-Do/edit?usp=sharing" target="_blank"> View The Orginal Document. </a>
+      <th style="float:right;">
+        <a href="https://docs.google.com/document/d/12LdwJIcPQfIMN0OL0HXOBxpryuyEtZxBABfu1Bpf-Do/edit?usp=sharing" target="_blank"> <p class="Border">View The Orginal Document. </p></a>
       </th>
         </tr>
   </table>
