--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
   </style>
 </head>
   <header>
+    <table> 
+      <tr>
+        <th>
     <h1> BURKOLOGY OFFICAL SITE </h1>
     <h5> Burkology: The Study Of Burkism. </h5>
-  </header>
+        </th>
+        <th>
+          <ul>
+            <li> Contact Info </li>
+            <li>Phone: 712-333-7080</li>
+            <li>Personal Email: ExplosiveDolphin@gmail.com </li>
+          </ul>
+        </th>
+      </tr>
+    </table>
+      </header>
 <body>
   <table class="Center">
     <tr>
