--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <h1> BURKOLOGY OFFICAL SITE </h1>
     <h5> Burkology: The Study Of Burkism. </h5>
         </th>
-        <th>
+        <th style="float:right;">
           <ul>
-            <li> Contact Info </li>
-            <li>Phone: 712-333-7080</li>
-            <li>Personal Email: ExplosiveDolphin@gmail.com </li>
+            <li style="text-align: left;"> Contact Info </li>
+            <li style="text-align: left;">Phone: 712-333-7080</li>
+            <li style="text-align: left;">Personal Email: ExplosiveDolphin@gmail.com </li>
           </ul>
         </th>
       </tr>
@@ -27,14 +27,13 @@
 <body>
   <table class="Center">
     <tr>
-      <th style="float:left;">
-        <a href="https://docs.google.com/document/d/1GcFVtJ-KF0aKi_mQ-tWeCmIspfkwvOuveUM7TarN_0A/edit?usp=sharing" target="_blank"><p class="Border">Join The Burkology Group Document </p></a>
-      </th>
       <th>
-  <img class="Burk Border"  src="https://bloximages.chicago2.vip.townnews.com/siouxcityjournal.com/content/tncms/assets/v3/editorial/a/d8/ad832fca-e14f-5c5e-a0a7-f41126431894/4d00327f6d4f8.image.jpg" Alt="Joe" />
-        </th>
-      <th style="float:right;">
-        <a href="https://docs.google.com/document/d/12LdwJIcPQfIMN0OL0HXOBxpryuyEtZxBABfu1Bpf-Do/edit?usp=sharing" target="_blank"> <p class="Border">View The Orginal Document. </p></a>
+        <a href="https://docs.google.com/document/d/1GcFVtJ-KF0aKi_mQ-tWeCmIspfkwvOuveUM7TarN_0A/edit?usp=sharing" target="_blank"><p class="Border">Join The Burkology Group Document </p></a>
+      <a href="https://docs.google.com/document/d/12LdwJIcPQfIMN0OL0HXOBxpryuyEtZxBABfu1Bpf-Do/edit?usp=sharing" target="_blank"> <p class="Border">View The Orginal Document. </p></a>
+      </th>
+     <th>
+         <img class="Burk Border"  src="https://bloximages.chicago2.vip.townnews.com/siouxcityjournal.com/content/tncms/assets/v3/editorial/a/d8/ad832fca-e14f-5c5e-a0a7-f41126431894/4d00327f6d4f8.image.jpg" Alt="Joe" />
+       
       </th>
         </tr>
   </table>
