--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
   <table class="Center">
     <tr>
       <th>
-        <a href="https://docs.google.com/document/d/1GcFVtJ-KF0aKi_mQ-tWeCmIspfkwvOuveUM7TarN_0A/edit?usp=sharing" target="_blank"><p class="Border">Join The Burkology Group Document </p></a>
+        <a href="https://docs.google.com/document/d/1GcFVtJ-KF0aKi_mQ-tWeCmIspfkwvOuveUM7TarN_0A/edit?usp=sharing" target="_blank"><p class="Border">Join The Burkology Group Document. </p></a>
       <a href="https://docs.google.com/document/d/12LdwJIcPQfIMN0OL0HXOBxpryuyEtZxBABfu1Bpf-Do/edit?usp=sharing" target="_blank"> <p class="Border">View The Orginal Document. </p></a>
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLSeq96OZl1brb1Gj23hV4ogLH24QC5GLEGeJi6acAZLBCfmgIQ/viewform" target="_blank"> <p class="Border">Apply For Editing Rights On Document. </p></a>
+
       </th>
      <th>
          <img class="Burk Border"  src="https://bloximages.chicago2.vip.townnews.com/siouxcityjournal.com/content/tncms/assets/v3/editorial/a/d8/ad832fca-e14f-5c5e-a0a7-f41126431894/4d00327f6d4f8.image.jpg" Alt="Joe" />
