--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <table> 
       <tr>
-        <th>
+        <th style="padding-right: 30px;">
     <h1> BURKOLOGY OFFICAL SITE </h1>
     <h5> Burkology: The Study Of Burkism. </h5>
         </th>
