--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1> BURKOLOGY OFFICAL SITE </h1>
     <h5> Burkology: The Study Of Burkism. </h5>
         </th>
-        <th style="float:right;">
+        <th style="margin-right:auto;">
           <ul>
             <li style="text-align: left;"> Contact Info </li>
             <li style="text-align: left;">Phone: 712-333-7080</li>
@@ -25,7 +25,7 @@
     </table>
       </header>
 <body>
-  <table class="Center">
+  <table>
     <tr>
       <th>
         <ul>
@@ -37,6 +37,13 @@
      <th>
          <img class="Burk Border"  src="https://bloximages.chicago2.vip.townnews.com/siouxcityjournal.com/content/tncms/assets/v3/editorial/a/d8/ad832fca-e14f-5c5e-a0a7-f41126431894/4d00327f6d4f8.image.jpg" Alt="Joe" />
        
+      </th>
+      <th> 
+        <ul>
+          <li> Hover to see chapter title.</li>
+          <li><abbr title="Intro:The Founder">Chapter 1</abbr></li>
+          <li><abbr title="The Creation">Chapter 2</abbr></li>
+          <li><abbr title="The Creation">Chapter 3</abbr></li>
       </th>
         </tr>
   </table>
