--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
           <li> Hover to see chapter title.</li>
           <li><abbr title="Intro:The Founder">Chapter 1</abbr></li>
           <li><abbr title="The Creation">Chapter 2</abbr></li>
-          <li><abbr title="The Creation">Chapter 3</abbr></li>
+          <li><abbr title="Self Love">Chapter 3</abbr></li>
+           <li><abbr title="The Divine One">Chapter 4</abbr></li>
+           <li><abbr title="Accepting Burkology Into Your Life">Chapter 5</abbr></li>
+          <li><abbr title="Existing As A Member">Chapter 6</abbr></li>
       </th>
         </tr>
   </table>
