--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <ul>
           <li> Hover to see chapter title.</li>
           <li><abbr title="Intro:The Founder">Chapter 1</abbr></li>
-          <li><abbr title="The Creation">Chapter 2</abbr></li>
+          <li><a href="Chapters/Chapter2.html" ><abbr title="The Creation">Chapter 2</abbr></a></li>
           <li><abbr title="Self Love">Chapter 3</abbr></li>
            <li><abbr title="The Divine One">Chapter 4</abbr></li>
            <li><abbr title="Accepting Burkology Into Your Life">Chapter 5</abbr></li>
