--- a/index.html
+++ b/index.html
@@ -41,12 +41,23 @@
       <th> 
         <ul>
           <li> Hover to see chapter title.</li>
-          <li><abbr title="Intro:The Founder">Chapter 1</abbr></li>
-          <li><a href="Chapters/Chapter2.html" ><abbr title="The Creation">Chapter 2</abbr></a></li>
-          <li><abbr title="Self Love">Chapter 3</abbr></li>
-           <li><abbr title="The Divine One">Chapter 4</abbr></li>
-           <li><abbr title="Accepting Burkology Into Your Life">Chapter 5</abbr></li>
-          <li><abbr title="Existing As A Member">Chapter 6</abbr></li>
+          <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter1.html"><abbr title="Intro:The Founder">Chapter 1</abbr></a></li>
+          <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter2.html" ><abbr title="The Creation">Chapter 2</abbr></a></li>
+          <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter3.html"><abbr title="Self Love">Chapter 3</abbr></a></li>
+           <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter4.html"><abbr title="Under Contruction">Chapter 4</abbr></a></li>
+           <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter5.html"><abbr title="Under Contruction">Chapter 5</abbr></a></li>
+          <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter6.html"><abbr title="Under Contruction">Chapter 6</abbr></a></li>
+          <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter7.html"><abbr title="Under Contruction">Chapter 7</abbr></a></li>
+          <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter8.html"><abbr title="Under Contruction">Chapter 8</abbr></a></li>
+          <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter9.html"><abbr title="Under Contruction">Chapter 9</abbr></a></li>
+          <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter10.html"><abbr title="Under Contruction">Chapter 10</abbr></a></li>
+          <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter11.html"><abbr title="Under Contruction">Chapter 11</abbr></a></li>
+          <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter12.html"><abbr title="Under Contruction">Chapter 12</abbr></a></li>
+          <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter13.html"><abbr title="Under Contruction">Chapter 13</abbr></a></li>
+          <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter14.html"><abbr title="Under Contruction">Chapter 14</abbr></a></li>
+          <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter15.html"><abbr title="Under Contruction">Chapter 15</abbr></a></li>
+          <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter16.html"><abbr title="Under Contruction">Chapter 16</abbr></a></li>
+          <li><a target="_blank" href="https://xplosivex.github.io/Burkoloy/Chapters/Chapter17.html"><abbr title="Under Contruction">Chapter 17</abbr></a></li>
       </th>
         </tr>
   </table>
