--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
         </ul>
       </th>
      <th>
+       <figure>
          <img class="Burk Border"  src="https://bloximages.chicago2.vip.townnews.com/siouxcityjournal.com/content/tncms/assets/v3/editorial/a/d8/ad832fca-e14f-5c5e-a0a7-f41126431894/4d00327f6d4f8.image.jpg" Alt="Joe" />
-       
+         <figcaption> <p style="font-size:14;">   “Only Known Image Of Joe Colorized” <br>
+“Yain’t’ive the vast understanding of whoum’ith religious outlooks as your over lord’ith has known for many centuries so let me, Joe guide’ith you through this journey.” <br> Testament 234 </p> </figcaption>
+       </figure>
       </th>
       <th> 
         <ul>
