--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     .Burk { width:350px; height:500px; }
     .Border { border:2px solid black; border-radius: 20px; }
   </style>
+  <title> </title>
+    <link rel="shortcut icon" href="http://xplosivex.github.io/Burkoloy/Resources/Icons/IndexIcon.ico" type="image/x-icon" />
 </head>
   <header>
     <table> 
