--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html> 
 <html>
 <head>
+   <meta charset="UTF-8">
+  <meta name="keywords" content="Burkology, Xplosive, Dahlen Bryce, Joe BurkHart">
+  <meta name="author" content="XplosiveX">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     .Center { margin-left:auto; margin-right:auto; float:center; }
     .Burk { width:350px; height:500px; }
