--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     .Center { margin-left:auto; margin-right:auto; float:center; }
-    .Burk { width:350px; height:500px; }
+    .Burk { width:350px; height:350px; }
     .Border { border:2px solid black; border-radius: 20px; }
   </style>
   <title> </title>
@@ -44,7 +44,7 @@
      <th>
        <figure>
          <img class="Burk Border"  src="https://bloximages.chicago2.vip.townnews.com/siouxcityjournal.com/content/tncms/assets/v3/editorial/a/d8/ad832fca-e14f-5c5e-a0a7-f41126431894/4d00327f6d4f8.image.jpg" Alt="Joe" />
-          <figcaption> <p id="Rotate" style="font-size:14;"> </p>
+          <figcaption> <p id="Rotate" style="font-size:14; width:250px; border: black solid 1px;"> </p>
        </figure>
       </th>
       <th> 
