--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       </header>
      
         
-             <tr>  <table>
-        <th>
+             <tr>  <table style="margin-left:auto; margin-right:auto;>
+        <th style="padding-right:100px;">
            <img class="Burk Border"  src="https://bloximages.chicago2.vip.townnews.com/siouxcityjournal.com/content/tncms/assets/v3/editorial/a/d8/ad832fca-e14f-5c5e-a0a7-f41126431894/4d00327f6d4f8.image.jpg" Alt="Joe" />
        </th>
       <th> 
